[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/StoreMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/SlickerSmallDynamicFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menus/Store/StoreIcons/Kindling0.png" type="Texture" id=5]
[ext_resource path="res://Menus/Store/StoreIcons/Kindling2.png" type="Texture" id=6]
[ext_resource path="res://Menus/Store/StoreIcons/Kindling1.png" type="Texture" id=7]
[ext_resource path="res://Menus/Store/StoreIcons/Kindling3.png" type="Texture" id=8]

[sub_resource type="AnimatedTexture" id=1]
frames = 4
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 8 )
frame_3/delay_sec = 0.0

[node name="StoreMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.5
margin_right = 33.5
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Title"]
margin_left = 33.0
margin_top = 22.0
margin_right = 33.0
margin_bottom = 22.0

[node name="TitleLabel" type="Label" parent="Title"]
margin_right = 67.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "store"

[node name="UpgradeInfo" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 8.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeInfo"]
margin_right = 8.0
margin_bottom = 40.0

[node name="TeethLabel" type="Label" parent="UpgradeInfo/VBoxContainer"]
margin_right = 8.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )

[node name="KindlingLabel" type="Label" parent="UpgradeInfo/VBoxContainer"]
margin_top = 22.0
margin_right = 8.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 109.0
margin_top = 76.0
margin_right = 211.0
margin_bottom = 103.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 102.0

[node name="KindlingButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 102.0
margin_bottom = 27.0
text = "kindling: 5 teeth"
icon = SubResource( 1 )

[node name="BackButton" type="Button" parent="."]
margin_right = 34.0
margin_bottom = 22.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_bottom = 22.0
text = "main menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/KindlingButton" to="." method="_on_KindlingButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
